# wflow-qgis

./: .gitignore  LICENSE  README.md  README.rst  metadata.txt  pyproject.toml  qgis.pth  setup.py  sitecustomize.py
docs/src/: index.rst  installation.rst
src/qgis_wflow/: __init__.py
src/qgis_wflow/add_field/gui/: add_check_dams_dialog.py  add_terracing_dialog.py  change_landuse_dialog.py  create_reservoir_dialog.py
src/qgis_wflow/add_field/gui/ui/: ui_landuseChooseFile.py
src/qgis_wflow/create_reservoir/gui/ui/: ui_ChooseFile.py  ui_ChooseFile.ui  ui_landuseChooseFile.ui
src/qgis_wflow/functions/: configuration.py  faulthandler.py  file_utils.py
src/qgis_wflow/menu_actions/: __init__.py  configuration_dialog.py  run_wflow.py
src/qgis_wflow/menu_actions/ui/: configuration.ui  hydromt_wflow_installation_progress - Copy.ui  hydromt_wflow_installation_progress.ui
src/qgis_wflow/processing/: __init__.py  add_gauges.py  check_dams.py  run_wflow.py  terracing.py  update_landuse.py  update_reservoirs.py  visualize_maps.py
src/qgis_wflow/resources/: attribution.html
src/qgis_wflow/resources/styles/: LAI_style.qml  Slope_style.qml  basins_style.qml  corine_style.qml  esa_worldcover_style.qml  gauges_style.qml  globcover_style.qml  reservoirs_style.qml  rivers_style.qml  vito_style.qml  wflow_dem_style.qml  wflow_soil_style.qml  wflow_subcatch_style.qml
src/qgis_wflow/result_viewer/: __init__.py
src/qgis_wflow/result_viewer/ui/: result_viewer.ui  result_viewer_ui.py
test/: conftest.py
test/test_processing/: test_folderstruct.py
