[tool.poetry]
# See for more information on the metadata:
#   https://python-poetry.org/docs/pyproject/
# The version entry must be present, however it is further ignored by the build
# process; the version is automatically set by using ``poetry-dynamic-versioning``.
name = "qgis-wflow"
version = "0.0.0"
description = "Add a short description here!"
authors = ["Peter van Tol <peter.van.tol@witteveenbos.com>"]
license = "Proprietary - Witteveen+Bos"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0 <3.14"
hydromt-wflow = "^0.7.0"
numpy = "^1.23.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
