[tool.poetry]
# See for more information on the metadata:
#   https://python-poetry.org/docs/pyproject/
# The version entry must be present, however it is further ignored by the build
# process; the version is automatically set by using ``poetry-dynamic-versioning``.
name = "qgis_wflow"
version = "0.0.0"
description = "Add a short description here!"
authors = ["Peter van Tol <peter.van.tol@witteveenbos.com>"]
license = "Proprietary - Witteveen+Bos"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0 <3.14"
hydromt-wflow = "^0.8.0"
numpy = "^1.23.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.isort]
# This section contains all the configuration for the tool `isort`. This tool
# can sort all import statements for you. See for documentation of thiss tool:
#   https://pycqa.github.io/isort/index.html
profile = "black"

[tool.black]
# This section contains all the configuration for the tool 'black`. This tool
# can reformat the code according to PEP 8. For more information, see:
#   https://black.readthedocs.io/en/stable/the_black_code_style/index.html
# **PRO-TIP**: If you’re asking yourself "Do I need to configure anything?" the
# answer is "No". Black is all about sensible defaults. Applying those defaults
# will have your code in compliance with many other Black formatted projects.
# Example:
# line-length = 100

[tool.pytest.ini_options]
# This section contains all the configuration for the tool `pytest`. This tool
# will run the tests for you. Use the follwoing command to get a list of all
# available commands:
#   poetry run pytest -h
# Specify command line options as you would do when invoking pytest directly.
minversion = "7.0"
addopts = "-ra -q"
norecursedirs = [
    "dist",
    "build",
]
testpaths = [
    "tests",
]
# Use pytest markers to select/deselect specific tests
# markers = [
#     "slow",   # mark tests as slow (deselect with '-m "not slow"')
#     "system", # mark end-to-end system tests
# ]

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module'
]

[tool.pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = "4.5"
package = "${package}"
extensions = [
    "qgis_processing"
]
